<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Metro Metro</string>
    <string name="content_description_menu_logo">Logo de la aplicacion</string>
    <string name="content_description_button_play">Boton principal para jugar</string>
    <string name="content_description_button_information">Boton para ver la informacion del Metro</string>
    <string name="content_description_button_configuration">Boton para ver la configuracion del juego</string>
    <string name="content_description_button_reset">Boton para resetear el juego</string>
    <string name="default_value_score_star_view">0</string>
    <string name="content_description_title_menu">Titulo de la pantalla</string>
    <string name="content_description_go_back_button">Boton para ir hacia atras</string>
    <string name="description_metro_information">Mapa del metro (Se puede hacer Zoom)</string>
    <string name="image_metro_santiago">Imagen del Metro de Santiago de Chile</string>
    <string name="metro_lines">Lineas Metro</string>
    <string name="description_metro_information_scroll">Lineas del Metro de Santiago de Chile</string>
    <string name="alternative1" tools:ignore="Typos">alternative1</string>
    <string name="alternative2">alternative2</string>
    <string name="alternative3">alternative3</string>
    <string name="alternative4">alternative4</string>
    <string name="default_value_current_number_question">0</string>
    <string name="separator_current_number_question">/</string>
    <string name="default_max_number_current_number_question">20</string>
    <string name="description_scroll_view_gameplay">Vista donde se muestran las lineas del metro avanzando</string>
    <string name="configuration_title">Configuración</string>
    <string name="configuration_sound">Sonido</string>
    <string name="configuration_music">Musica</string>
    <string name="reset_question">¿Estas seguro que quieres reiniciar? (Perderas todo tu progreso)</string>
    <string name="reset_button_reset">Reiniciar</string>
    <string name="reset_button_go_back">Volver</string>
    <string name="content_description_reset_alert">Advertencia para reiniciar</string>
    <string name="lost_dialog_title">¡Acabas de perder! :(</string>
    <string name="lost_dialog_reset_level_button">Boton para reiniciar nivel</string>
    <string name="reset_dialog_ads_button">Boton para ver ads y continuar jugando</string>
    <string name="lost_dialog_continue">Continuar</string>
    <string name="lost_dialog_reset_level">Reiniciar nivel</string>
    <string name="menu_row_default_value">Linea 1</string>
    <string name="menu_row_metro_color">Color del metro</string>
    <string name="menu_row_background_color">Color de fondo del metro</string>
    <string name="menu_row_star_description">Estrella del nivel, si esta conseguida aparece con color</string>
    <string name="station_layout_background_metro_color">Color de fondo del metro</string>
    <string name="station_layout_white_color">Color blanco del metro</string>
    <string name="station_layout_line_color">Color del la linea</string>
    <string name="default_value_station_name">TextView</string>
    <string name="winning_dialog_title">¡Felicidades, ganaste una estrella!</string>
    <string name="winning_dialog_go_to_menu">Ir al menu</string>
    <string name="winning_dialog_star_description">Estrella ganada por completar el nivel</string>
    <string name="rate_it_text">¿Estas disfrutando Metro Metro? Ayudanos con una Review</string>
    <string name="dejar_una_review">Dejar una Review!</string>
    <string name="logo_metro_metro">Logo Metro Metro</string>
    <string name="star">Star</string>
    <string name="lineas_metro">Lineas Metro</string>
    <string name="line_name">Linea X</string>
    
    <!-- Nuevos strings para accesibilidad -->
    <string name="alternative_option_description">Opción de estación de metro. Toca para seleccionar esta estación.</string>
    <string name="time_progress_bar_description">Barra de progreso del tiempo restante para responder</string>
    <string name="line_name_description">Nombre de la línea de metro actual</string>
    <string name="app_description">Juego educativo para aprender las estaciones del Metro de Santiago</string>
    <string name="accessibility_dialog_title">Título del diálogo: %1$s</string>
    <string name="accessibility_dialog_message">Mensaje del diálogo: %1$s</string>
    <string name="accessibility_button_accept">Botón aceptar: %1$s</string>
    <string name="accessibility_button_cancel">Botón cancelar: %1$s</string>
    <string name="accessibility_station_name">Nombre de la estación: %1$s</string>
    <string name="accessibility_current_question">Pregunta %1$d de %2$d</string>
    <string name="accessibility_score">Puntuación: %1$d</string>
    <string name="accessibility_time_remaining">Tiempo restante: %1$d segundos</string>
</resources>