<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lines_metro_background"
    tools:context=".activities.MetroInformationActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/description_metro_information_scroll"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/titiliumweb_bold"
        android:text="@string/description_metro_information"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/metroMap" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="72dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:onClick="goToMainActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lines_metro_button_back"
        android:contentDescription="@string/content_description_go_back_button"
        />

    <com.jorgecruces.metrometro.customViews.ZoomableImageView
        android:id="@+id/metroMap"
        android:layout_width="379dp"
        android:layout_height="498dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle2"
        app:layout_constraintVertical_bias="0.064"
        app:srcCompat="@drawable/info_metro_image_map"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/image_metro_santiago"
        />

    <TextView
        android:id="@+id/textViewTitle2"
        android:layout_width="291dp"
        android:layout_height="59dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/gameplay_background_game_line"
        android:fontFamily="@font/titiliumweb_bold"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/metro_lines"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>