<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogLayout"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/lostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/titiliumweb_bold"
        android:padding="20dp"
        android:text="@string/lost_dialog_title"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewResetLevel"
        android:layout_width="101dp"
        android:layout_height="84dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageViewAds"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/main_menu_button_reset"
        android:contentDescription="@string/lost_dialog_reset_level_button"
        />

    <ImageView
        android:id="@+id/imageViewAds"
        android:layout_width="101dp"
        android:layout_height="84dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewResetLevel"
        app:srcCompat="@drawable/gameplay_button_ad"
        android:contentDescription="@string/reset_dialog_ads_button"
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/titiliumweb_bold"
        android:text="@string/lost_dialog_continue"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewAds"
        app:layout_constraintEnd_toEndOf="@+id/imageViewAds"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/titiliumweb_bold"
        android:text="@string/lost_dialog_reset_level"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewResetLevel"
        app:layout_constraintStart_toStartOf="@+id/imageViewResetLevel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>