<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/lostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/titiliumweb_bold"
        android:padding="20dp"
        android:text="@string/reset_question"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonResetConfirmationDialog"
        android:layout_width="117dp"
        android:layout_height="53dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#FF0000"
        android:fontFamily="@font/titiliumweb_bold"
        android:text="@string/reset_button_reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonGoBackConfirmationDialog" />

    <Button
        android:id="@+id/buttonGoBackConfirmationDialog"
        android:layout_width="117dp"
        android:layout_height="53dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#6F1AFF00"
        android:fontFamily="@font/titiliumweb_bold"
        android:text="@string/reset_button_go_back"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonResetConfirmationDialog"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonGoBackConfirmationDialog"
        app:layout_constraintEnd_toStartOf="@+id/buttonResetConfirmationDialog"
        app:layout_constraintStart_toEndOf="@+id/buttonGoBackConfirmationDialog"
        app:layout_constraintTop_toBottomOf="@+id/lostTextView"
        app:srcCompat="@drawable/confirmation_dialog"
        android:contentDescription="@string/content_description_reset_alert"
        />

</androidx.constraintlayout.widget.ConstraintLayout>