<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/buttonTitleRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/titiliumweb_regular"
        android:padding="20dp"
        android:text="@string/rate_it_text"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/LogoMetroMetro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRateIt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#E3D3D3"
        android:text="@string/dejar_una_review"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogoMetroMetro" />

    <ImageView
        android:id="@+id/LogoMetroMetro"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logo_metro_metro"
        app:layout_constraintBottom_toTopOf="@+id/buttonRateIt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTitleRate"
        app:srcCompat="@drawable/icon" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="65dp"
        android:layout_height="71dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="72dp"
        android:contentDescription="@string/star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/LogoMetroMetro"
        app:layout_constraintTop_toBottomOf="@+id/buttonTitleRate"
        app:srcCompat="@drawable/lines_metro_star" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="65dp"
        android:layout_height="71dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="19dp"
        android:contentDescription="@string/star"
        app:layout_constraintEnd_toStartOf="@+id/LogoMetroMetro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTitleRate"
        app:srcCompat="@drawable/lines_metro_star" />

</androidx.constraintlayout.widget.ConstraintLayout>